src/passes/snapshots/lumina2__passes__cst_gen__test__trait_empty.snap
---
source: src/passes/cst_gen.rs
expression: "trait MyTrait {}"
---
TraitDeclaration {
    tok_trait: Trait,
    name: Ident(
        "MyTrait",
    ),
    tok_l_brace: LBrace,
    methods: [],
    tok_r_brace: RBrace,
}
